--- a/public/assets/css/items_add.css
+++ b/public/assets/css/items_add.css
@@ -138,15 +138,30 @@ div.article div a {
     text-align: center;
 }
 
-.delete-button {
+.article-link {
     grid-area: giftButton;
-    margin: 0;
-    background-color: var(--event-color-1);
-    width: 100%;
+    text-decoration: none;
+    color: var(--primary-color);
+    background-color: var(--btn-color);
+    border-radius: 11px;
+    font-size: 25px;
     text-align: center;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    font-size: 20px;
+    padding: 0.5rem;
+}
+
+.delete-button {
+    grid-area: seeMore;
+    background-color: var(--event-color-1);
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    width: 50%;
 }
 
 .add-form {
@@ -254,7 +269,8 @@ div.article div a {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: var(--event-color-9);
+    background-color: var(--btn-color);
+    color: var(--primary-color);
     opacity: 80%;
     width: 20rem;
     margin: auto;
@@ -262,7 +278,8 @@ div.article div a {
 }
 
 .add_Article:hover {
-    background-color: var(--btn-color);
+    background-color: var(--background-color);
+    color: var(--font-color);
 }
 
 .add {
@@ -270,11 +287,12 @@ div.article div a {
     border: transparent;
     font-size: 30px;
     padding: 1rem;
-    color: var(--font-color);
+    color: var(--primary-color);
 }
 
 .add:hover {
     color: var(--primary-color);
+    color: var(--font-color);
 }
 
 .btn_add {
@@ -321,12 +339,41 @@ div.article div a {
     display: block;
 }
 
+.share_link-container {
+    margin-bottom: 2rem;
+    opacity: 80%;
+}
+
+.share_link {
+    text-decoration: none;
+    color: var(--font-color);
+    font-size: 1rem;
+    background-color: var(--background-color);
+    padding: 0.5rem;
+    border-radius: 11px;
+}
+
 /*END OF MOBILE FIRST*/
 
 
 /*DESKTOP FIRST*/
 
 @media only screen and (min-width: 900px) {
+    .share_link-container {
+        display: flex;
+        position: absolute;
+        right: 1rem;
+    }
+
+    .share_link {
+        text-decoration: none;
+        color: var(--font-color);
+        font-size: 2rem;
+        background-color: var(--background-color);
+        padding: 1rem;
+        border-radius: 11px;
+    }
+
     .list-container {
         width: 50%;
         margin: auto;
@@ -337,7 +384,7 @@ div.article div a {
         display: flex;
         flex-direction: row;
         justify-content: center;
-        background-color: var(--event-color-9);
+        background-color: var(--btn-color);
         opacity: 80%;
         width: 20rem;
         margin: auto;
@@ -346,7 +393,8 @@ div.article div a {
     }
 
     .add_Article:hover {
-        background-color: var(--btn-color);
+        background-color: var(--background-color);
+        color: var(--font-color);
     }
 
     .add {
@@ -354,11 +402,12 @@ div.article div a {
         border: transparent;
         font-size: 30px;
         padding: 1rem;
-        color: var(--font-color);
+        color: var(--primary-color);
     }
 
     .add:hover {
         color: var(--primary-color);
+        color: var(--font-color);
     }
 
     .btn_add {
@@ -433,9 +482,9 @@ div.article div a {
         grid-template-columns: 1.5fr 1.5fr 0.5fr;
         grid-template-rows: 1fr 2fr 1fr 1fr;
         grid-template-areas: "articlePicture articleTitle articlePrice" "articlePicture articleDescription articleDescription" "articlePicture seeMore seeMore" "giftButton giftButton giftButton";
-        width: 25rem;
+        width: 30rem;
         height: 15rem;
-        padding: 1rem;
+        padding: 0.5rem;
         border-radius: 10px;
         margin-bottom: 2rem;
         background-color: var(--background-color);
@@ -477,5 +526,32 @@ div.article div a {
     .add-form {
         margin-top: 2rem;
     }
+
+    .article-link {
+        grid-area: giftButton;
+        text-decoration: none;
+        color: var(--primary-color);
+        background-color: var(--btn-color);
+        border-radius: 11px;
+        font-size: 25px;
+        text-align: center;
+        margin: 0;
+    }
+
+    .delete-button {
+        grid-area: seeMore;
+        background-color: var(--event-color-1);
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        width: 50%;
+    }
+
     /*END OF DESKTOP FIRST*/
 }
