ouverture liens nouvelle page

--- a/src/View/List/add_article.html.twig
+++ b/src/View/List/add_article.html.twig
@@ -68,7 +68,7 @@
 								<h4 class="article-title">{{ article.name }}</h4>
 								<h4 class="article-price">{{ article.price }}€</h4>
 								<p class="article-description">{{ article.description }}</p>
-								<a href="{{ article.market_link }}" class="article-link"> En savoir plus </a>
+								<a href="{{ article.market_link }}" target="_blank" class="article-link"> En savoir plus </a>
 								<form action="" method="GET">
 									<input class="delete-button" type="submit" name="{{ article.id }}" id="{{ article.id }}" value="Supprimer">
 								</form>
