--- a/src/View/List/share.html.twig
+++ b/src/View/List/share.html.twig
@@ -33,7 +33,7 @@
                     <h4 class="article-title">{{ article.aname }}</h4>
                     <h4 class="article-price">{{ article.price }}€</h4>
                     <p class="article-description">{{ article.adescription }}</p>
-                    <a class="seeMore-button" href="{{ article.market_link }}">
+                    <a class="seeMore-button" href="{{ article.market_link }}" target="_blank" >
                         <p>see more</p>
                     </a>
                     <div class="gift-button">
