--- a/public/assets/css/list_share.css
+++ b/public/assets/css/list_share.css
@@ -144,7 +144,7 @@ div.article {
     color: var(--primary-color);
 }
 
-.gift-button {
+.gift-button-reserved {
     grid-area: giftButton;
     margin: 0;
     background-color: var(--card-color);
@@ -159,7 +159,29 @@ div.article {
     cursor: pointer;
 }
 
-.gift-button > p {
+.gift-button-reserved > p {
+    margin: 0;
+    font-size: 1.7rem;
+    font-weight: bold;
+    color: var(--primary-color);
+}
+
+.gift-button-already-reserved {
+    grid-area: giftButton;
+    margin: 0;
+    background-color: var(--btn-color);
+    width: 100%;
+    text-align: center;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.gift-button-already-reserved > p {
     margin: 0;
     font-size: 1.7rem;
     font-weight: bold;
@@ -202,6 +224,7 @@ div.article {
         margin-bottom: 2rem;
         background-color: var(--background-color);
         box-shadow: 0 0 0 0;
+        z-index: 0;
     }
 
     .article-img {
