--- a/public/assets/css/user-lists.css
+++ b/public/assets/css/user-lists.css
@@ -12,8 +12,10 @@ a {
 
 h1 {
     text-align: center;
+    background-color: transparent;
     color: var(--primary-color);
     text-shadow: 5px 5px 8px rgb(0, 0, 0);
+    font-size: 2rem;
 }
 
 /*list container*/
@@ -142,5 +144,13 @@ h1 {
         box-shadow: 5px 5px 8px rgb(0, 0, 0);
         background: var(--background-color);
         width: calc((100% / 3) - 5rem);
+    }
+
+    h1 {
+        text-align: center;
+        background-color: transparent;
+        color: var(--primary-color);
+        text-shadow: 5px 5px 8px rgb(0, 0, 0);
+        font-size: 4rem;
     }
 }
