--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -53,6 +53,7 @@ a {
     background-color: transparent;
     color: var(--primary-color);
     text-shadow: 5px 5px 8px rgb(0, 0, 0);
+    font-size: 2rem;
 }
 
 .paragraph {
@@ -91,6 +92,14 @@ a {
         height: calc(100% - 30%);
     }
 
+    .titre {
+        text-align: center;
+        background-color: transparent;
+        color: var(--primary-color);
+        text-shadow: 5px 5px 8px rgb(0, 0, 0);
+        font-size: 4rem;
+    }
+    
     .card {
         width: calc(100% / 3 - 3rem);
         height: 100%;
