--- a/src/View/List/add_article.html.twig
+++ b/src/View/List/add_article.html.twig
@@ -20,7 +20,7 @@
 			<div class="list-container">
 				<h3 class="list-title">Nom de la liste :
 					{{ lists['name'] }}</h3>
-				<h3 class="list-date">Date de l'évenement :
+				<h3 class="list-date">Date de l'événement :
 					{{ lists['limit_date'] }}</h3>
 				<p class="list-description">
 					<strong>{{ lists['description'] }}</strong>
@@ -55,7 +55,7 @@
 					<label for="description">
 						<p class="description">Description</p>
 					</label>
-					<textarea class="description_area" id="description" placeholder="Indiquez des information sur votre cadeau" name="description" required></textarea>
+					<textarea class="description_area" id="description" placeholder="Indiquez des informations sur votre cadeau" name="description" required></textarea>
 					<div>
 						<input type="submit" id='submit' value="Ajouter">
 					</div>
@@ -64,14 +64,18 @@
 					<div class="article-container">
 						{% for article in list %}
 							<div class="article">
+								<div class="article-id-hidden" style="display: none;">{{ article.id}}</div>
+								<div class="list-id-hidden" style="display: none;">{{ list[0]['list_id'] }}</div>
 								<img class="article-img" alt="{{ article.name }}" src="{{ article.picture }}"/>
 								<h4 class="article-title">{{ article.name }}</h4>
 								<h4 class="article-price">{{ article.price }}€</h4>
 								<p class="article-description">{{ article.description }}</p>
-								<a href="{{ article.market_link }}" target="_blank" class="article-link"> En savoir plus </a>
-								<form action="" method="GET">
-									<input class="delete-button" type="submit" name="{{ article.id }}" id="{{ article.id }}" value="Supprimer">
-								</form>
+								<a class="seeMore-button" href="{{ article.market_link }}" target="_blank">
+									<p>En savoir plus</p>
+								</a>
+								<div class="erase-button">
+									<p>Supprimer !</p>
+								</div>
 							</div>
 						{% endfor %}
 					</div>
