--- a/src/View/Components/_user-lists.html.twig
+++ b/src/View/Components/_user-lists.html.twig
@@ -2,19 +2,19 @@
 <h1>
     Vos Listes
 </h1>
-<div class="cards">
-    <div class="card-add">
-        <div class="card-header-add">Créer une liste</div>
-        <div class="in-card-add">
-            <a href="/list/user/lists/addList" title="Ajout">
-                <img src="/assets/images/icone_ajout.png" alt="icone_ajout"/>
-            </a>
-        </div>
+<div class="card-add">
+    <div class="card-header-add">Créer une liste</div>
+    <div class="in-card-add">
+        <a href="/list/user/lists/addList" title="Ajout">
+            <img src="/assets/images/icone_ajout.png" alt="icone_ajout"/>
+        </a>
     </div>
+</div>
+<div class="cards">
     {% for list in lists %}
         <div class="card">
             <div style="display: none;">{{ list[0][0]['lid'] }}</div>
-            <div class="card-header">{{ list[0][0]['ename'] }}</div>
+            <div class="card-header {{ events[list[0][0]['ename']] }}">{{ list[0][0]['ename'] }}</div>
             <div class="in-card">
                 <div class="card-body">
                     <p class="card-title">{{ list[0][0]['lname'] }}</p>
@@ -24,7 +24,7 @@
                 <div class="gift-list">
                     {% for i in 0..3 %}
                         {% if list[1][i]['aname'] is not null %}
-                            <p>{{ list[1][i]['aname'] }}</p>
+                            <p class="{{ events[list[0][0]['ename']] }}">{{ list[1][i]['aname'] }}</p>
                         {% endif %}
                     {% endfor %}
                 </div>
