--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -74,6 +74,7 @@ a {
     padding-top: 5px;
     padding-bottom: 10px;
     font-weight: bold;
+    box-shadow: 2px 2px 4px black;
 }
 
 .welcome-user {
