ajout logo en .svg

--- a/src/View/Components/_navbar.html.twig
+++ b/src/View/Components/_navbar.html.twig
@@ -4,7 +4,7 @@ rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0
 <!-- Top Navigation Menu -->
 <div class="topnav">
 	
-	<a class="logoDesktop" href="/" title="Home"><img src="/assets/images/logo.png" alt="Logo"/></a>
+	<a class="logoDesktop" href="/" title="Home"><img src="/assets/images/logo.svg" alt="Logo"/></a>
 	<!-- Navigation links (hidden by default) -->
 	<div id="myLinks">
 		<a href="/">Accueil</a>
