fix css user_list

--- a/src/View/Components/_user-lists.html.twig
+++ b/src/View/Components/_user-lists.html.twig
@@ -6,7 +6,7 @@
     <div class="card-header-add">Créer une liste</div>
     <div class="in-card-add">
         <a href="/list/user/lists/addList" title="Ajout">
-            <img src="/assets/images/icone_ajout.png" alt="icone_ajout"/>
+            <img class="add-img" src="/assets/images/icone_ajout.png" alt="icone_ajout"/>
         </a>
     </div>
 </div>
