--- a/src/View/List/add_article.html.twig
+++ b/src/View/List/add_article.html.twig
@@ -27,7 +27,7 @@
 				</p>
 			</div>
 			<div class="share_link-container">
-				<a class="share_link" href="http://localhost:8000/list/share?share_link={{ lists.share_link }}" target="_blank" > Partager </a>
+				<a class="share_link" c target="_blank" > Partager </a>
 			</div>
 			<div class="form-container">
 				<div class="add_Article">
