--- a/public/assets/css/user-lists.css
+++ b/public/assets/css/user-lists.css
@@ -67,8 +67,12 @@ h1 {
 .card-add {
     border-radius: 10px;
     width: calc(100% - 2rem);
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin: 0 1rem 2rem 1rem;
+}
+
+.card-add:hover {
+    -webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
 .in-card-add a img {
@@ -81,8 +85,34 @@ h1 {
     width: calc(100% - 2rem);
     margin-left: 1rem;
     margin-right: 1rem;
-    cursor: pointer;
+    cursor: pointer; 
 }
+
+.card:hover {
+    -webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+@-webkit-keyframes scale-up-center {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+    100% {
+      -webkit-transform: scale(1.1);
+              transform: scale(1.1);
+    }
+  }
+  @keyframes scale-up-center {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+    100% {
+      -webkit-transform: scale(1.1);
+              transform: scale(1.1);
+    }
+  }
 
 .card-header-add {
     height: fit-content;
@@ -152,6 +182,10 @@ h1 {
     border-radius: 10px;
     color: var(--font-color);
     text-align: center;
+}
+
+.add-img {
+    padding: 0 15rem 0 15rem;
 }
 
 @media screen and (min-width: 1200px) {
