--- a/public/assets/css/list.css
+++ b/public/assets/css/list.css
@@ -4,6 +4,18 @@
     position: fixed;
 }
 
+.wedding {
+    background-color: var(--event-color-8);
+}
+
+.birthday {
+    background-color: var(--event-color-1);
+}
+
+.baby_shower {
+    background-color: var(--event-color-2);
+}
+
 h1 {
     text-align: center;
     background-color: transparent;
@@ -76,10 +88,9 @@ h3 {
     height: fit-content;
     padding: 0.5rem;
     text-align: center;
-    background-color: var(--card-color);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    color: var(--primary-color);
+    color: var(--font-color);
 }
 
 .in-card {
@@ -126,10 +137,9 @@ h3 {
 .in-card .gift-list p {
     font-size: 1rem;
     align-self: center;
-    background-color: var(--card-color);
     padding: 0.5rem;
     border-radius: 10px;
-    color: var(--primary-color);;
+    color: var(--font-color);;
 }
 
 @media screen and (min-width: 1200px) {
